--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             align-items: center;
             justify-content: center;
             position: relative;
+			    background-repeat: no-repeat;
+
         }
 
         .hero-content {
